// Copyright (c) 2016-2018 iQIYI.com.  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package objectserver;

service KVStore {   
    rpc SaveAsyncJob(SaveAsyncJobMsg) returns (SaveAsyncJobReply) {}
    rpc ListAsyncJobs(ListAsyncJobsMsg) returns (ListAsyncJobsReply) {}
    rpc CleanAsyncJob(CleanAsyncJobMsg) returns (CleanAsyncJobReply) {}
}

message KVAsyncJob {
    string method = 1;
    map<string, string> headers = 2;
    string account = 3;
    string container = 4;
    string object = 5;
    string device = 6;
    int32 policy = 7;
}

message ListAsyncJobsMsg {
    string device = 1;
    int32 policy = 2;
    int32 pagination = 3;
    KVAsyncJob position = 4;
}

message ListAsyncJobsReply {
    repeated KVAsyncJob jobs = 1;
}

message SaveAsyncJobMsg {
    KVAsyncJob job = 1;
}

message SaveAsyncJobReply {
    bool success = 1;
}

message CleanAsyncJobMsg {
    KVAsyncJob job = 4;
}

message CleanAsyncJobReply {
    bool success = 1;
}
